force-app/main/default/objects/Social_Media_Sends__c/Social_Media_Sends__c.object-meta.xml
<CustomObject>
    <label>Social Media Send</label>
    <nameField>
        <displayFormat>SMS-{000000}</displayFormat>
        <label>Social Media Sends Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Sends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>