force-app/main/default/objects/Social_Media_Sends__c/fields/Social_Destination__c.field-meta.xml
<CustomField>
    <fullName>Social_Destination__c</fullName>
    <label>Social Destination</label>
    <referenceTo>Social_Destination__c</referenceTo>
    <relationshipLabel>Social Media Sends</relationshipLabel>
    <relationshipName>Social_Media_Sends</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>