force-app/main/default/objects/Social_Media_Sends__c/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Social Media</label>
    <referenceTo>Social_Media__c</referenceTo>
    <relationshipLabel>Social Media Sends</relationshipLabel>
    <relationshipName>Social_Media_Sends</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>