force-app/main/default/objects/Social_Media_Sends__c/fields/Social_Source__c.field-meta.xml
<CustomField>
    <fullName>Social_Source__c</fullName>
    <label>Social Source</label>
    <referenceTo>Social_Source__c</referenceTo>
    <relationshipLabel>Social Media Sends</relationshipLabel>
    <relationshipName>Social_Media_Sends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>